--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/axios": "^5.11.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "portal-vue": "^2.1.7"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
